--- a/Backned/index.html
+++ b/Backned/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <img src="" height="200px" width="200px">
 </body>
+<script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
 <script src="script.js"></script>
 </html>
